link color fixed and more visible

--- a/src/app/pages/termsofuse/termsofuse.component.html
+++ b/src/app/pages/termsofuse/termsofuse.component.html
@@ -1,4 +1,4 @@
-<nz-layout style="background-color: white;">
+<nz-layout style="background-color: white">
   <section
     style="
       text-align: left;
@@ -17,18 +17,18 @@
       <b>Terms Of Use</b>
     </h1>
     <br />
-    <div nz-row style="font-size: 13.75px;">
+    <div nz-row style="font-size: 13.75px">
       <div
         nz-col
         nzSpan="10"
         nzOffset="1"
-        style="font-family: montserrat, sans-serif;"
+        style="font-family: montserrat, sans-serif"
       >
-        <span style="font-size: 20px;">
+        <span style="font-size: 20px">
           <h1><b>Allgemeine Nutzungs- und Lizenzbedingungen </b></h1>
         </span>
         <p>
-          <a href="https://www.logframelab.ai ">LogframeLab</a>
+          <a class="link" href="https://www.logframelab.ai ">LogframeLab</a>
           <br />
         </p>
         <br />
@@ -42,9 +42,9 @@
           auch als „Software“ bezeichnet) durch die Arqaam GmbH mit Sitz in
           Hamburg (nachfolgend auch als „Anbieter“ bezeichnet) über die
           Internetseite
-          <a href="https://www.logframelab.ai ">LogframeLab</a> (nachfolgend
-          „logframelab.ai“), soweit nicht schriftlich zwischen den Parteien eine
-          Abänderung vereinbart wird. <br />
+          <a class="link" href="https://www.logframelab.ai ">LogframeLab</a>
+          (nachfolgend „logframelab.ai“), soweit nicht schriftlich zwischen den
+          Parteien eine Abänderung vereinbart wird. <br />
           1.2 Abweichende oder entgegenstehende Geschäftsbedingungen sind nur
           mit unserer ausdrücklichen Zustimmung wirksam.
         </p>
@@ -61,7 +61,8 @@
           <br />
           2.2 Des Weiteren ist Gegenstand des Vertrages die Überlassung der
           Software in Form von kompilierbaren Quellcode durch den Anbieter auf
-          Github unter <a href="https://www.github.com ">Github</a> (nachfolgend
+          Github unter
+          <a class="link" href="https://www.github.com ">Github</a> (nachfolgend
           zusammenfassend als „Github“ bezeichnet). Dabei gelten die
           vorliegenden Allgemeinen Nutzungsbedingungen nur soweit, wie sie den
           zugrundeliegenden Lizenzbedingungen unter II. nicht widersprechen.
@@ -207,15 +208,16 @@
         nz-col
         nzSpan="10"
         nzOffset="2"
-        style="font-family: montserrat, sans-serif;"
+        style="font-family: montserrat, sans-serif"
       >
-        <span style="font-size: 22px;">
+        <span style="font-size: 22px">
           <h1><b>General terms of use and license</b></h1>
         </span>
         <p>
-          <a href="https://www.logframelab.ai ">LogframeLab</a> (Please note
-          that the English version of this text is a convenience translation
-          only, the German version prevails in cases of dispute or doubt)
+          <a class="link" href="https://www.logframelab.ai ">LogframeLab</a>
+          (Please note that the English version of this text is a convenience
+          translation only, the German version prevails in cases of dispute or
+          doubt)
         </p>
         <br />
         <h2><b>I. Terms of use</b></h2>
@@ -226,9 +228,9 @@
           Logframe Lab software (hereinafter also referred to as "software") by
           Arqaam GmbH, based in Hamburg (hereinafter also referred to as
           "provider"), via the website
-          <a href="https://www.logframelab.ai ">LogframeLab</a> (hereinafter
-          "logframelab.ai“), unless an amendment is agreed in writing between
-          the parties.
+          <a class="link" href="https://www.logframelab.ai ">LogframeLab</a>
+          (hereinafter "logframelab.ai“), unless an amendment is agreed in
+          writing between the parties.
           <br />
           1.2 Deviating or conflicting terms of use are only effective with our
           explicit consent.
@@ -243,7 +245,7 @@
           <br />
           2.2 Furthermore, the object of the contract is the provision of the
           software in the form of compilable source code by the provider on
-          Github at <a href="https://www.github.com ">Github</a>
+          Github at <a class="link" href="https://www.github.com ">Github</a>
           (hereinafter collectively referred to as "Github"). The present
           general terms of use apply only to the extent that they do not
           contradict the underlying license conditions under II.
@@ -381,18 +383,18 @@
       border-radius: 15px;
     "
   >
-    <div style="font-family: montserrat, sans-serif;">
-      <h1 style="text-align: center; font-size: 40px; padding: 25px;">
+    <div style="font-family: montserrat, sans-serif">
+      <h1 style="text-align: center; font-size: 40px; padding: 25px">
         <b>II. CC BY-NC-SA 4.0</b>
       </h1>
-      <p style="text-align: center;">
+      <p style="text-align: center">
         © Copyright 2020 – Arqaam GmbH
         <br />
         Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
         Public License
       </p>
 
-      <div style="padding: 50px;">
+      <div style="padding: 50px">
         <h2>
           <b
             >1. Creative Commons Attribution-NonCommercial-ShareAlike 4.0
@@ -511,6 +513,7 @@
           <br />
           3. <u>Term.</u> The term of this Public License is specified in
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s6a"
           >
             Section 6(a)</a
@@ -526,6 +529,7 @@
           Technological Measures. For purposes of this Public License, simply
           making modifications authorized by this
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s2a4"
           >
             Section 2(a)(4)</a
@@ -556,6 +560,7 @@
           sponsored, endorsed, or granted official status by, the Licensor or
           others designated to receive attribution as provided in
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s3a1Ai"
           >
             Section 3(a)(1)(A)(i)</a
@@ -618,6 +623,7 @@
           <br />
           2. You may satisfy the conditions in
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s3a1"
           >
             Section 3(a)(1)</a
@@ -628,6 +634,7 @@
           to a resource that includes the required information. If requested by
           the Licensor, You must remove any of the information required by
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s3a1A"
           >
             Section 3(a)(1)(A)</a
@@ -660,6 +667,7 @@
           <br />
           a. for the avoidance of doubt,
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s2a1"
           >
             Section 2(a)(1)</a
@@ -674,6 +682,7 @@
           not its individual contents) is Adapted Material, including for
           purposes of
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s3b"
           >
             Section 3(b)</a
@@ -681,6 +690,7 @@
           <br />
           c. You must comply with the conditions in
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s3a"
           >
             Section 3(a)</a
@@ -744,6 +754,7 @@
           b. Where Your right to use the Licensed Material has terminated under
 
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s6a"
           >
             Section 6(a)</a
@@ -757,6 +768,7 @@
           For the avoidance of doubt, this
 
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s6b"
           >
             Section 6(b)</a
@@ -771,26 +783,31 @@
           <br />
           d. Sections
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s1"
           >
             1</a
           >,
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s5"
           >
             5</a
           >,
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s6"
           >
             6</a
           >,
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s7"
           >
             7</a
           >, and
           <a
+            class="link"
             href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode#s8"
           >
             8</a
