[#4pmtch] - Logic chain functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ngx-spinner bdColor="rgb(246, 248, 250, 0.50)" size="medium" color="rgba(69,52,87,1)" type="ball-clip-rotate-multiple" [fullScreen]="true"></ngx-spinner>
-<div class="content-layout" [style.max-height]="height">
+<div class="content-layout">
 <nz-layout>
   <ul nz-menu nzMode="horizontal" class="nz-header">
     <li nz-menu-item>
