--- a/src/styles.scss
+++ b/src/styles.scss
@@ -191,3 +191,7 @@ h1, h2, h3, p, button {
   text-transform: uppercase;
   color: #ffffff;
 }
+.toolbar-btn{
+  margin-right: 10px;
+  margin-left: 10px;
+}
