[#4pmtch] - Logic chain functionality

--- a/src/app/pages/indicator/downloadresult/downloadresult.component.scss
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.scss
@@ -24,3 +24,9 @@ a {
 .end-item {
     margin-left: 20px;
 }
+.center-item img,  .end-item img{
+    width: 80px;
+    margin-top: 7px;
+    height: 80px;
+    margin-bottom: 5px;
+}
