--- a/src/app/pages/indicator/downloadresult/downloadresult.component.html
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.html
@@ -16,19 +16,19 @@
     <i nz-icon nzType="download"></i>
     Download Indicators Excel<br />
   </a>
-  <a class='end-item' (click)="downloadFile('dfid')">
+  <a class='center-item' (click)="downloadFile('dfid')">
     <img src="assets/icons-microsoft-excel-2019-96.png" alt="excel logo"/><br />
     <em nz-icon nzType="download"></em>
     Download Indicators Excel<br />
     (DFID format)
   </a>
-  <a class='start-item' (click)="download('svg')">
-    <img src="assets/svg.svg" style="width: 80px;margin-top: 7px;height: 80px;margin-bottom: 5px;" /><br />
+  <a class='center-item' (click)="downloadSvgAndPng('svg')">
+    <img src="assets/icons-download-chart-svg.svg" /><br />
     <i nz-icon nzType="download"></i>
     Download Indicators Svg
   </a>
-  <a class='start-item' (click)="download('png')">
-    <img src="assets/png.svg" style="width: 80px;margin-top: 7px;height: 80px;margin-bottom: 5px;" /><br />
+  <a class='end-item' (click)="downloadSvgAndPng('png')">
+    <img src="assets/icons-download-chart-png.svg" /><br />
     <i nz-icon nzType="download"></i>
     Download Indicators Png
   </a>
