[#4pmtch] - Logic chain functionality

--- a/src/app/pages/indicator/downloadresult/downloadresult.component.html
+++ b/src/app/pages/indicator/downloadresult/downloadresult.component.html
@@ -25,11 +25,11 @@
   <a class='center-item' (click)="downloadSvgAndPng('svg')">
     <img src="assets/icons-download-chart-svg.svg" /><br />
     <i nz-icon nzType="download"></i>
-    Download Indicators Svg
+    Download Indicators SVG
   </a>
   <a class='end-item' (click)="downloadSvgAndPng('png')">
     <img src="assets/icons-download-chart-png.svg" /><br />
     <i nz-icon nzType="download"></i>
-    Download Indicators Png
+    Download Indicators PNG
   </a>
 </div>
