--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -142,6 +142,6 @@
 </nz-spin>
 <ng-template #indicatorTemplate>
   <div class="loading-row">
-    <i nz-icon nzType="loading" style="font-size:24px;"></i>
+    <i nz-icon nzType="loading"></i>
   </div>
 </ng-template>
