--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -217,6 +217,7 @@ background-color: #453457;
 }
 .loading-row i {
   color: #453457;
+  font-size:24px !important;
 }
 /*
   @media only screen and (max-width: 48.5rem) {
