fix with indicators management table

--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -3,6 +3,7 @@
           [disabled]="isAddingNewUser">
     Add user
   </button>
+  <div>
   <nz-table #users [nzData]="dataset" nzSize="small">
     <thead>
     <tr>
@@ -32,4 +33,5 @@
     </tr>
     </tbody>
   </nz-table>
+</div>
 </div>
