--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@ app-indicator {
 }
 
 //slider wheel after moving color
-//converted HEX green to RBG so that it can be 50% transparent (to offset the color scheme a little better).  
+//converted HEX green to RBG so that it can be 50% transparent (to offset the color scheme a little better).
 .ant-slider-handle:focus {
   border-color: #a5c2ae;
   box-shadow: 0 0 0 5px rgb(165,194,174, 0.5);
@@ -147,4 +147,8 @@ h1, h2, h3, p, button {
   line-height: 15px;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+app-manage-indicators {
+  width: 100%;
 }
