--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -15,6 +15,17 @@
   //background-color: #fafafa;
   //min-height: 300px;
   text-align: center;
+  
+}
+
+.stepSection{
+  margin-left: -56px;
+  margin-top: -66px;
+  position: absolute;
+}
+.stepSection button{
+  height: 40px;
+  width:40px;
 }
 
 .steps-action {
