[#7upzq4] - Change location of button for indicators-upload

--- a/src/app/pages/indicator/indicator.component.html
+++ b/src/app/pages/indicator/indicator.component.html
@@ -114,3 +114,4 @@
     </button>
   </div>
 </div>
+<button id="uploadButton" nz-button nzType="primary" routerLink="/indicators-upload"><i nz-icon nzType="cloud-upload"></i>Submit Indicators</button>
