--- a/src/app/pages/indicator/indicator.component.scss
+++ b/src/app/pages/indicator/indicator.component.scss
@@ -276,3 +276,18 @@ background-color: #453457;
   box-shadow: .25rem .35rem .1625rem #00000029;
   max-width: 48rem;
   }*/
+
+#uploadButton {
+  position: fixed;
+  bottom: 20vh;
+  right: 2vh;
+  z-index: 999;
+  background: #453457;
+  border: 1px solid #ffffff;
+  box-sizing: border-box;
+  // border-radius: 15px;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ffffff;
+}
