--- a/src/app/pages/indicator/scanresult/scanresult.component.html
+++ b/src/app/pages/indicator/scanresult/scanresult.component.html
@@ -1,7 +1,7 @@
 <div class="indicatorContent">
   <div class="warning">
     <nz-alert
-      *ngIf="listOfData.length === 0"
+      *ngIf="listOfData.length === 0 && !this.showLoading"
       nzType="warning"
       nzMessage="No indicators were found during the document scanning."
       nzShowIcon
@@ -51,7 +51,7 @@
 
     <div style="position: relative;">
       <input
-        (input)="search()"
+        (input)="search(false)"
         nzSize="large"
         style="padding-right: 30px;"
         type="text"
@@ -60,33 +60,21 @@
         [(ngModel)]="searchValue"
       />
     </div>
-    <div style="display: flex; flex-direction: row; margin: 10px;">
-      <span
-        >Total: {{ displayData.length }} - selected: Impact {{ impactCount }},
-        Outcome {{ outcomeCount }}, Output {{ outputCount }}</span
-      >
-    </div>
     <nz-table
       #dynamicTable
       [nzData]="displayData"
-      [nzPageSize]="displayData.length"
+      [nzPageSize]="100"
       [nzScroll]="{ y: '1000px' }"
       [nzLoading]="showLoading"
-      nzShowPagination="false"
-      nzShowSizeChanger="false"
+      [nzPageSizeOptions]="[50, 100, 150, 200]"
+      [nzShowSizeChanger]="true"
       nzSize="middle"
       nzBordered
+      id="dynamicTable"
     >
-      <thead (nzSortOrderChange)="sort($event)">
+      <thead (nzSortOrderChange)="sort($event, false)">
         <!--TODO nzSingleSort-->
         <tr>
-          <th
-            nzShowCheckbox
-            [(nzChecked)]="isAllDisplayDataChecked"
-            [nzIndeterminate]="isIndeterminate"
-            (nzCheckedChange)="checkAll($event)"
-            nzWidth="5%"
-          ></th>
           <th
             nzShowSort
             nzColumnKey="level"
@@ -158,7 +146,6 @@
             nzPopoverTitle="OECD DAC/CRD Code"
             nzPopoverContent="This is the three digit code referring to the CRS codes, another way to understand what the indicator is related to."
             nzWidth="10%"
-            nzBreakWord
             nzShowFilter
             [nzFilters]="searchFilter.crsCode"
             [nzFilterFn]="filterCRSCode"
@@ -201,21 +188,16 @@
       <tbody>
         <ng-template ngFor let-data [ngForOf]="dynamicTable.data">
           <tr
-            (click)="selectindicator(data.sort_id)"
+            (click)="selectindicator(data.sort_id, data)"
             [class.row-checked]="mapOfCheckedId[data.sort_id]"
           >
-            <td
-              nzShowCheckbox
-              [(nzChecked)]="mapOfCheckedId[data.sort_id]"
-              (nzCheckedChange)="refreshStatus()"
-            ></td>
             <td>
               <nz-tag [nzColor]="data.indicator.color"
                 >{{ data.indicator.level }}
               </nz-tag>
             </td>
-            <td>{{ data.indicator.name }}</td>
-            <td>{{ printArray(data.indicator.source, 'name') }}</td>
+            <td nzBreakWord>{{ data.indicator.name }}</td>
+            <td nzBreakWord>{{ printArray(data.indicator.source, 'name') }}</td>
             <td style="text-align: center;">
               <div style="text-align: center;">
                 <i
@@ -234,13 +216,202 @@
                 ></i>
               </div>
             </td>
-            <td>{{ data.indicator.sector }}</td>
-            <td>{{ printArray(data.indicator.crsCode, 'name') }}</td>
-            <td title="{{printArray(data.indicator.sdgCode, 'name')}}" nzEllipsis>{{ printArray(data.indicator.sdgCode, 'name') }}</td>
+            <td nzBreakWord>{{ data.indicator.sector }}</td>
+            <td nzBreakWord>{{ printArray(data.indicator.crsCode, 'name') }}</td>
+            <td nzBreakWord title="{{printArray(data.indicator.sdgCode, 'name')}}" nzEllipsis>{{ printArray(data.indicator.sdgCode, 'name') }}</td>
             <td *ngIf="showKeywordCol">{{ data.indicator.numTimes }}</td>
           </tr>
         </ng-template>
+    
       </tbody>
     </nz-table>
   </div>
+
+  <ng-template #contentTemplate>
+    <div class="warning">  
+      <div style="position: relative;">
+        <input
+          (input)="search(true)"
+          nzSize="large"
+          style="padding-right: 30px;"
+          type="text"
+          nz-input
+          placeholder="Search selected indicator"
+          [(ngModel)]="searchSelected"
+        />
+      </div>
+      <nz-table
+        #selectedTable
+        [nzData]="filteredSelectedIndicators"
+        [nzPageSize]="selectedIndicators.length"
+        nzShowSizeChanger="false"
+        nzSize="middle"
+        nzBordered
+      >
+        <thead (nzSortOrderChange)="sort($event, true)">
+          <!--TODO nzSingleSort-->
+          <tr>
+            <th
+              nzShowSort
+              nzColumnKey="level"
+              nz-popover
+              nzPopoverTitle="Level"
+              nzPopoverContent="These are the levels of the indicators."
+              nzWidth="10%"
+              nzShowFilter
+              [nzFilters]="searchFilter.level"
+              [nzFilterFn]="filterLevel"
+            >
+              Level
+            </th>
+            <th
+              nz-popover
+              nzPopoverTitle="Indicator"
+              nzPopoverContent="The phrasing of the actual indicator. Some indicators may need to be further specified accordingly."
+              style="font-weight: bold;"
+            >
+              Indicator
+            </th>
+  
+            <th
+              nzShowSort
+              nzColumnKey="source"
+              nzWidth="10%"
+              nz-popover
+              nzPopoverTitle="Source"
+              nzPopoverContent="Where the indicator comes from. Who has developed it."
+              nzShowFilter
+              [nzFilters]="searchFilter.source"
+              [nzFilterFn]="filterSource"
+            >
+              Source
+            </th>
+            <th
+              nzShowSort
+              nzColumnKey="disaggregation"
+              nz-popover
+              nzPopoverTitle="Disaggregation"
+              nzPopoverContent="If the indicator requires disaggregation. As a rule of thumb, whenever people are counted, there should a disaggregation (at least by sex)."
+              nzWidth="10%"
+              style="font-size: 10px;"
+              nzBreakWord
+              nzShowFilter
+              [nzFilters]="searchFilter.disaggregation"
+              [nzFilterFn]="filterDisag"
+            >
+              Disaggregation
+            </th>
+            <th
+              nzShowSort
+              nzColumnKey="sector"
+              nzWidth="10%"
+              nz-popover
+              nzPopoverTitle="Thematic Area"
+              nzPopoverContent="The sectors where the indicator is related to."
+              nzBreakWord
+              nzShowFilter
+              [nzFilters]="searchFilter.sector"
+              [nzFilterFn]="filterSector"
+            >
+              Thematic Area
+            </th>
+            <th
+              nzShowSort
+              nzColumnKey="crsCode"
+              nz-popover
+              nzPopoverTitle="OECD DAC/CRD Code"
+              nzPopoverContent="This is the three digit code referring to the CRS codes, another way to understand what the indicator is related to."
+              nzWidth="10%"
+              nzBreakWord
+              nzShowFilter
+              [nzFilters]="searchFilter.crsCode"
+              [nzFilterFn]="filterCRSCode"
+            >
+              OECD DAC/CRS Code
+            </th>
+            <th
+              nzShowSort
+              nzShowFilter
+              nzColumnKey="sdgCode"
+              nz-popover
+              nzPopoverTitle="SDG Code"
+              nzPopoverContent="This is in relations to the 17 SDGs."
+              nzWidth="10%"
+              nzShowFilter
+              [nzFilters]="searchFilter.sdgCode"
+              [nzFilterFn]="filterSDGCode"
+            >
+              SDG Code
+            </th>
+            <th
+              nz-popover
+              nzPopoverTitle="Keyword frequency"
+              nzPopoverContent="The number of times the document triggers the keywords of each indicator. Ideally you do not want to use indicators with a keyword frequency of less than 10."
+              nzWidth="10%"
+              *ngIf="showKeywordCol"
+            >
+              Keyword Frequency
+              <nz-slider
+                (nzOnAfterChange)="onAfterChange($event)"
+                [nzTooltipVisible]="'default'"
+                [nzRange]="true"
+                [nzMin]="sliderMinValue"
+                [nzMax]="sliderMaxValue"
+                [ngModel]="[10, sliderMaxValue]"
+              ></nz-slider>
+            </th>
+            <th><i nz-icon nzType="delete" nzTheme="outline" class="red-color"></i></th>
+          </tr>
+        </thead>
+        <tbody>
+          <ng-template ngFor let-data [ngForOf]="selectedTable.data">
+            <tr>
+              <td>
+                <nz-tag [nzColor]="data.indicator.color"
+                  >{{ data.indicator.level }}
+                </nz-tag>
+              </td>
+              <td nzBreakWord>{{ data.indicator.name }}</td>
+              <td nzBreakWord>{{ printArray(data.indicator.source, 'name') }}</td>
+              <td style="text-align: center;">
+                <div style="text-align: center;">
+                  <i
+                    *ngIf="!data.indicator.disaggregation"
+                    style="font-size: 25px; color: rgb(216, 126, 126);"
+                    nz-icon
+                    nzType="close"
+                    nzTheme="outline"
+                  ></i>
+                  <i
+                    *ngIf="data.indicator.disaggregation"
+                    style="font-size: 25px; color: #a5c2ae;"
+                    nz-icon
+                    nzType="check"
+                    nzTheme="outline"
+                  ></i>
+                </div>
+              </td>
+              <td nzBreakWord>{{ data.indicator.sector }}</td>
+              <td nzBreakWord>{{ printArray(data.indicator.crsCode, 'name') }}</td>
+              <td title="{{printArray(data.indicator.sdgCode, 'name')}}" nzBreakWord>{{ printArray(data.indicator.sdgCode, 'name') }}</td>
+              <td *ngIf="showKeywordCol">{{ data.indicator.numTimes }}</td>
+              <td (click)="removeSelectedIndicator(data)"><i nz-icon nzType="delete" nzTheme="outline" class="red-color"></i></td>
+
+            </tr>
+          </ng-template>
+        </tbody>
+      </nz-table>
+    </div>
+    </ng-template>
 </div>
+<button nz-button nz-popover [nzPopoverContent]="contentTemplate" nzPopoverTrigger="click" *ngIf="this.selectedIndicators.length !=0" id="selectionButton">
+  <i nz-icon [nzType]="'check-circle'" [nzTheme]="'twotone'" [nzTwotoneColor]="'#52c41a'"></i>
+  <nz-badge [nzCount]="impactCount" [nzStyle]="{ backgroundColor: 'purple' }">
+  </nz-badge>
+  <nz-badge [nzCount]="outcomeCount" [nzStyle]="{ backgroundColor: 'red' }" >
+  </nz-badge>
+  <nz-badge [nzCount]="outputCount"  [nzStyle]="{ backgroundColor: 'green' }">
+  </nz-badge>
+  <nz-badge [nzCount]="selectedIndicators.length"  [nzStyle]="{ backgroundColor: 'black' }">
+  </nz-badge>
+</button>
