--- a/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
+++ b/src/app/pages/indicator/visualisationresult/visualisationresult.component.html
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="draw2d" [style.height]="height">
       <div onselectstart="javascript:/*IE8 hack*/return false" id="gfx_holder"
-        style="width:1500px; height:900px;position: absolute;left: 0;"></div>
+        style="width:1500px; position: absolute;left: 0;" [style.height]="canvasHeight"></div>
     </div>
   </div>
 </div>
